<resources>
    <string name="app_name">Demeter</string>
    <string name="all_status">Status</string>
    <string name="all_get_status">Get status</string>
    <string name="all_date_of_status">Date of status</string>
    <string name="all_temperature">Temperature</string>
    <string name="all_pressure">Pressure</string>
    <string name="all_soil_moisture">Soil moisture</string>
    <string name="all_humidity">Humidity</string>
    <string name="all_min"> min</string>
    <string name="all_full">full</string>

    <string name="main_activity_status_date">Status date: %1$s</string>

    <string name="all_water_barrel">Water barrel</string>
    <string name="all_shower_barrel">Shower barrel</string>
    <string name="all_filling">Filling</string>
    <string name="all_filling_watering_barrel">Filling watering barrel</string>
    <string name="all_filling_washing_barrel">Filling washing barrel</string>
    <string name="all_turn_off_filling">Turn off filling</string>
    <string name="all_turn_off_all">Turn off all</string>

    <string name="all_watering">Watering</string>
    <string name="all_setup_time_in_min">Setup time in min</string>
    <string name="all_watering_in_process">Watering in process</string>
    <string name="all_turn_on_watering">Turn on watering</string>
    <string name="all_turn_off_watering">Turn off watering</string>
    <string name="all_turn_off_watering_on">Turn off watering on: </string>
    <string name="all_watering_strawberries">Watering strawberries</string>
    <string name="all_watering_lawn">Watering lawn</string>
    <string name="all_watering_vegetables">Watering vegetables</string>
    <string name="all_watering_flower_garden">Watering flower-garden</string>

    <string name="all_settings">Settings</string>
    <string name="all_save">Save</string>
    <string name="all_saved">Saved</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_channels_names">Channels names</string>
    <string name="all_channel_name">Channel name</string>
    <string name="all_receiving_telephone_number">Receiving telephone number</string>
    <string name="all_phone_number_example">+71234567890</string>
    <string name="all_remind_about_watering">Remind about watering</string>
    <string name="all_enable_remind">Enable remind</string>

    <string name="content_description_timer">Timer</string>
    <string name="content_description_filling_watering_barrel">Filling watering barrel</string>
    <string name="content_description_filling_shower_barrel">Filling shower barrel</string>

    <string name="all_test_three_digit_value">---</string>
    <string name="watering_on_set_watering_time">Tap on clock image and set watering time</string>

    <string name="all_not_enough_permissions">Not enough permissions</string>
    <string name="all_please_fill_settings_data">Please, fill settings data</string>

</resources>
