<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvChannelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginTop="@dimen/margin_all_small"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:text="@string/all_channels_names"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llChannelsNames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginTop="@dimen/margin_all_medium"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChannelsNames">

        <EditText
            android:id="@+id/etWateringFieldOne"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/all_channel_name"
            android:ems="10"
            android:hint="@string/all_channel_name"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

        <EditText
            android:id="@+id/etWateringFieldTwo"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

        <EditText
            android:id="@+id/etWateringFieldThree"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

        <EditText
            android:id="@+id/etWateringFieldFour"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

        <EditText
            android:id="@+id/etWateringFieldFive"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

        <EditText
            android:id="@+id/etWateringFieldSix"
            style="@style/tvChannelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_all_medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvReceivingPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginTop="@dimen/margin_all_big"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:text="@string/all_receiving_telephone_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llChannelsNames" />

    <EditText
        android:id="@+id/etReceivingPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginTop="@dimen/margin_all_small"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:ems="10"
        android:hint="@string/all_phone_number_example"
        android:inputType="phone"
        android:padding="@dimen/padding_all_small"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReceivingPhoneNumber" />

    <TextView
        android:id="@+id/tvRemindAboutWatering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginTop="@dimen/margin_all_big"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:text="@string/all_remind_about_watering"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReceivingPhoneNumber" />

    <CheckBox
        android:id="@+id/cbRemindAboutWatering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_small"
        android:checked="false"
        android:padding="@dimen/padding_all_medium"
        android:text="@string/all_enable_remind"
        app:layout_constraintEnd_toEndOf="@+id/tvRemindAboutWatering"
        app:layout_constraintStart_toStartOf="@+id/tvRemindAboutWatering"
        app:layout_constraintTop_toBottomOf="@+id/tvRemindAboutWatering" />

    <LinearLayout
        android:id="@+id/llSettingsButtons"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_cancel" />

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>